--- a/pages/about.html
+++ b/pages/about.html
@@ -23,13 +23,17 @@
                 <div class="authors-container">
                     <div class="card">
                         <div class="image">
-                            <img src="/static/images/user2.png" alt="author image">
+                            <a target="_blank" href="https://github.com/Ayoubrabiae">
+                                <img src="/static/images/user2.png" alt="author image">
+                            </a>
                         </div>
                         <h3 class="name">Hamza Outayb</h3>
                     </div>
                     <div class="card">
                         <div class="image">
+                            <a target="_blank" href="https://github.com/HamzaOutayb">
                             <img src="/static/images/user.png" alt="author image">
+                                <a>
                         </div>
                         <h3 class="name">Ayoub Rabya</h3>
                     </div>
